--- a/core/static/css/frontstyle.css
+++ b/core/static/css/frontstyle.css
@@ -398,3 +398,11 @@ body{
     color: #FFF;
     margin-bottom:10px;
 }
+
+.immigrant-main{
+    width:90%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
